# local-rag

./: .gitignore  HARDWARE_GUIDE.md  README.md  app.py  docs.txt  pyproject.toml  requirements.txt  server.py
db/: mongo.py
ingestion/: ingest.py
retrieval/: retrieve.py
static/: history.html  index.html  script.js  style.css
